bk_ida/gccida/g0/noce_get_condition
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:1977:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:1978:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:1991:13: error: expected identifier or '('
 struct set = pc_set( jump); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:1993:67: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
&& *( _QWORD *)( *( _QWORD *)( *( _QWORD *)&set[1] + 24LL) + 8LL) == jump[4]; 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:1997:30: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)tmp == 61 && mode_class_0[*( ( unsigned __int8 *)tmp + 2)] == MODE_INT ) 
                             ^~~~~~~~~~~~
                             mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:2002:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = (  struct rtx_def *)cond[1]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:2004:27: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v6 = reverse_condition( ( rtx_code)*( _WORD *)cond); 
                          ^~~~~~~~
                          rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:2004:36: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v6 = reverse_condition( ( rtx_code)*( _WORD *)cond); 
                        ~~~~~~~~~~~^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/ifcvt.c:2027:31: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)tmpb == 61 && mode_class_0[*( ( unsigned __int8 *)tmpb + 2)] == MODE_INT ) 
                              ^~~~~~~~~~~~
                              mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_get_condition/src/obj/ifcvt.o] Error 1
